<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleCentered="true"
        android:background="@color/primary_color"
        app:titleTextColor="@color/white"/>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_meu_pet"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_16sp"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/baleia_jubarte_image"
        android:layout_width="@dimen/image_size_200dp"
        android:layout_height="@dimen/image_size_200dp"
        android:contentDescription="@string/baleia_jubarte_description"
        android:src="@drawable/baleia_jubarte"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/pet_information_species"
        android:layout_marginTop="@dimen/margin_top_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_information_species"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        android:paddingLeft="@dimen/padding_110dp"
/>

    <TextView
        android:id="@+id/pet_information_name"
        android:layout_marginTop="@dimen/margin_top_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_information_name"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        android:paddingLeft="@dimen/padding_110dp"
/>

    <TextView
        android:id="@+id/pet_information_age"
        android:layout_marginTop="@dimen/margin_top_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_110dp"
        android:text="@string/pet_information_age"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40dp"
        android:text="@string/button_message"
        android:textAllCaps="true"
        app:backgroundTint="@color/secondary_color"
        />

    </LinearLayout>
</ScrollView>